test: prevent auto-zoom on mobile keyboard w text-size: 16px.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,6 @@
-html {
-/*    overflow: hidden;
-*/}
 body {
 	background-color: #222;
 }
-
 html, body {
 	height: 100%;
 	width: 100%;
@@ -29,6 +25,8 @@ h3 {
 	height: 18px;
 	box-shadow: 2px 2px 10px #444;
 	cursor: pointer;
+	font-size: 16px;
+	height: 24px;
 }
 #addAnimal {
 	color: #eee;
@@ -38,17 +36,26 @@ h3 {
 	height: 18px;
 	box-shadow: 2px 2px 10px #444;
 	cursor: pointer;
+	position: relative;
+	left: 136px;
+	bottom: 24px;
+	height: 24px;
+	margin-left: 0px;
+}
+#animal-input {
+	margin-right: 0px;
+	box-shadow: inset 0px 0px 3px black;
+	border: 1px;
+	height: 24px;
 }
 #formWrapper {
-	margin: 0 auto 48px;
+	margin: 4px auto 48px;
 	width: 90%;
 	text-align: center;
 	position: absolute;
 }
-#addAnimal {
-	position: relative;
-	left: 150px;
-	bottom: 19px;
+.formItem {
+		font-size: 16px;
 }
 #scrollLeft {
 	float: right;
@@ -63,10 +70,10 @@ h3 {
 #animalButtons {
 	white-space: nowrap;
     overflow: auto;
-    height: 40px;
+    height: 48px;
 }
 #animals{
-	margin: 32px auto;
+	margin: 40px auto;
 	padding-bottom: 32px;
 	text-align: center;
 }
